--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "express-session": "^1.15.6",
     "massive": "^4.7.1",
     "material-ui": "^0.20.0",
+    "moment": "^2.22.1",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-live-clock": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
-    "redux-promise-middleware": "^5.0.0"
+    "redux-promise-middleware": "^5.0.0",
+    "sweetalert2": "^7.19.2"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
